Added a note to the overview map and updated gitignore

--- a/incidents/templates/overview_map.html
+++ b/incidents/templates/overview_map.html
@@ -17,6 +17,7 @@
   <div id="map"></div>
 
   {% if incidents %}
+    <p><strong>Note:</strong> the data for the incidents has changed and the following information is out-of-date.</p>
     <table id="incidents-data">
       <thead>
         <tr>
